# PyServer

./: .gitignore  LICENSE  README.md  dateChanger.py  pyproject.toml  run.py
config/: apps.yaml
config/apps/debugTools/: pingGoogle.bat
src/pyserver_manager/: __init__.py  app.py  config.py  menu.py  runner.py
src/pyserver_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_config.py
